# ncms-core-rs

./: Cargo.toml  README.md
src/: authentications.rs  lib.rs  mysql.rs
src/authentications/: api_auth.rs  common.rs  google_authenticator.rs  mod.rs
src/errors/: http.rs  mod.rs  validation.rs
src/graphql/: mod.rs
src/http/: mod.rs  response.rs
src/http/graphql/client/: mod.rs
src/models/: header.rs  mod.rs
src/utils/: rand.rs
