[package]
edition = "2021"
name = "ncms_core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.3"
diesel = {version = "1.4.8", features = ["mysql"]}
dotenv = "0.15"
google-authenticator = "0.3.0"
juniper = "0.15"
rand_core = {version = "0.6", features = ["std"]}
regex = "1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.15", features = ["full"]}

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "link-args= -static"]

[patch.crates-io]
mysqlclient-sys = {git = "https://github.com/pzmarzly/mysqlclient-sys", rev = "acd1b2b"}
